--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
 ---
+import { getAllAvailableYears } from "../shared/utils";
+
 const base = import.meta.env.BASE_URL;
+const years = await getAllAvailableYears();
+const latestYear = years[years.length - 1];
 ---
 
 <!doctype html>
@@ -21,7 +25,7 @@ const base = import.meta.env.BASE_URL;
         </button>
         <ul id="nav-menu">
           <li><a href={base}>GemeinderatsRadar</a></li>
-          <li><a href={`${base}vorlagen2025`}>Vorlagen</a></li>
+          <li><a href={`${base}vorlagen${latestYear}`}>Vorlagen</a></li>
           <li>
             <a
               href="https://sitzungskalender.karlsruhe.de/db/ratsinformation/start"
@@ -38,6 +42,17 @@ const base = import.meta.env.BASE_URL;
     </main>
   </body>
 </html>
+
+<style is:global>
+  .page-header {
+    font-size: 2.5rem;
+    color: #333;
+    margin-bottom: 20px;
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    text-align: center;
+  }
+</style>
 
 <style>
   nav {
