--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,18 +28,7 @@ const uiOptions = {
 
 <Layout>
   <div class="container">
-    <h1 class="header">GemeinderatsRadar</h1>
+    <h1 class="page-header">GemeinderatsRadar</h1>
     <Search id="search" className="pagefind-ui" uiOptions={uiOptions} />
   </div>
 </Layout>
-
-<style>
-  .header {
-    font-size: 2.5rem;
-    color: #333;
-    margin-bottom: 20px;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    text-align: center;
-  }
-</style>
