--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { getAllAvailableYears } from "../shared/utils";
+import { getAllAvailableYears } from "../shared/data";
 
 const base = import.meta.env.BASE_URL;
 const years = await getAllAvailableYears();
