--- a/src/components/Consultations.astro
+++ b/src/components/Consultations.astro
@@ -1,5 +1,5 @@
 ---
-import type { ResolvedConsultation } from "../pages/vorlage/[reference].astro";
+import type { ResolvedConsultation } from "../shared/types";
 import { formatDateShort } from "../shared/utils";
 
 interface Props {
