--- a/src/components/KeyInfo.astro
+++ b/src/components/KeyInfo.astro
@@ -1,6 +1,5 @@
 ---
-import type { Paper } from "../shared/types/paper";
-import type { Organization } from "../shared/types/organization";
+import type { Organization, Paper } from "../shared/types";
 import { formatDateShort } from "../shared/utils";
 
 interface Props {
