--- a/src/components/PapersTable.astro
+++ b/src/components/PapersTable.astro
@@ -1,5 +1,5 @@
 ---
-import type { Paper } from "../shared/types/paper";
+import type { Paper } from "../shared/types";
 import { formatDateShort } from "../shared/utils";
 
 interface Props {
